--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <body>
 
         <header class="d-flex align-center justify-spaceAround">
-            <div class="w-100 d-flex align-center justify-spaceAroundd-flex align-center justify-spaceAround">
+            <div class="container w-100 d-flex align-center justify-spaceAround align-center justify-between">
                 <h1>Simon Says</h1>
+                <p id="score"></p>
                 <button id="start">Start new game</button>
             </div>
 
