Miglioramenti user experience

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="d-flex align-center justify-spaceAround">
             <div class="container w-100 d-flex align-center justify-spaceAround align-center justify-between">
                 <h1>Simon Says</h1>
-                <p id="score"></p>
+
                 <button id="start">Start new game</button>
             </div>
 
@@ -41,6 +41,7 @@
                         </div> -->
                         
                     </div>
+                    <p id="score" class="text-center"></p>
                 </div>
 
         </main>
